# starting-ragchatbot-codebase

./: CLAUDE.md  debug_chromadb.py  debug_courses.py  frontend-changes.md  load_courses.py  pyproject.toml  query_flow_diagram.md  run.sh  test_ai_generator.py  test_resolution.py  test_search.py
.claude/: settings.local.json
backend/: ai_generator.py  app.py  config.py  search_tools.py  vector_store.py
frontend/: index.html  script.js  style.css
scripts/: check-all.sh  format.sh  lint.sh  test.sh
tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_resolution.py  test_search.py
