[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.23",
    "anthropic==0.58.2",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0,<4.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "numpy<2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--disable-warnings",
    "--tb=short"
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests", 
    "api: marks tests as API tests"
]
asyncio_mode = "auto"
